2015-04-30  Andy Buckley  <andy.buckley@cern.ch>

	* Removing uses of boost::assign::list_of, preferring the existing
	comma-based assign override for now, for C++11 compatibility.

	* Convert MC_Z* analysis finalize methods to use scale() rather than normalize().

2015-04-01  Holger Schulz  <holger.schulz@durham.ac.uk>

	* Add CMS 7 TeV rapidity gap analysis (CMS_2015_I1356998).

	* Remove FinalState Projection.

2015-03-30  Holger Schulz  <holger.schulz@durham.ac.uk>

	* Add ATLAS 7 TeV photon + jets analysis (ATLAS_2013_I1244522).

2015-03-26  Andy Buckley  <andy.buckley@cern.ch>

	* Updates for HepMC 2.07 interface constness improvements.

2015-03-25  Holger Schulz  <holger.schulz@durham.ac.uk>

	* Add ATLAS double parton scattering in W+2j analysis (ATLAS_2013_I1216670).

2015-03-24  Andy Buckley  <andy.buckley@cern.ch>

	* 2.2.1 release!

2015-03-23  Holger Schulz  <holger.schulz@durham.ac.uk>

	* Add ATLAS differential Higgs analysis (ATLAS_2014_I1306615).

2015-03-19  Chris Pollard <cpollard@cern.ch>

	* Add ATLAS V+gamma analyses (ATLAS_2013_I1217863)

2015-03-20  Andy Buckley  <andy.buckley@cern.ch>

	* Adding ATLAS R-jets analysis i.e. ratios of W+jets and Z+jets
	observables (ATLAS_2014_I1312627 and _EL, _MU variants)

	* include/Rivet/Tools/ParticleUtils.hh: Adding same/oppSign and
	same/opp/diffCharge functions, operating on two Particles.

	* include/Rivet/Tools/ParticleUtils.hh: Adding HasAbsPID functor
	and removing optional abs arg from HasPID.

2015-03-19  Andy Buckley  <andy.buckley@cern.ch>

	* Mark ATLAS_2012_I1083318 as VALIDATED and fix d25-x01-y02 ref data.

2015-03-19  Chris Pollard <cpollard@cern.ch>

	* Add ATLAS W and Z angular analyses (ATLAS_2011_I928289)

2015-03-19  Andy Buckley  <andy.buckley@cern.ch>

	* Add LHCb charged particle multiplicities and densities analysis (LHCB_2014_I1281685)

	* Add LHCb Z y and phi* analysis (LHCB_2012_I1208102)

2015-03-19  Holger Schulz  <holger.schulz@durham.ac.uk>
