@@ -20,9 +20,9 @@ namespace Rivet {
 
     /// Book histograms
     void init() {
-      /// @todo Urk, abuse! Need explicit HiggsFinder (and TauFinder?)
       Cut cut = Cuts::abseta < 3.5 && Cuts::pT > 25*GeV;
-      ZFinder hfinder(FinalState(), cut, PID::TAU, 115*GeV, 125*GeV, 0.0, ZFinder::NOCLUSTER);
+      /// @todo Urk, abuse! Need explicit HiggsFinder and TauFinder?
+      ZFinder hfinder(FinalState(), cut, PID::TAU, 115*GeV, 135*GeV, 0.0, ZFinder::NOCLUSTER, ZFinder::NOTRACK, 125*GeV);
       addProjection(hfinder, "Hfinder");
       _h_H_mass = bookHisto1D("H_mass", 50, 119.7, 120.3);
       _h_H_pT = bookHisto1D("H_pT", logspace(100, 1.0, 0.5*sqrtS()/GeV));
